[feat] vllm available!!!

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,4 +20,9 @@ dependencies = [
     "tiktoken",
     "transformers==4.46.1",
     "sentencepiece",
+    # "deocr[playwright, pymupdf] @ file:///home/meng_wang/DeOCR",
+    "deocr[playwright,pymupdf]",
 ]
+
+[tool.uv.sources]
+deocr = { path = "../DeOCR", editable = true }
