--- a/config/render/default.yml
+++ b/config/render/default.yml
@@ -2,16 +2,16 @@
 pagesize:
   - 896
   - 896
-marginLeft: 20
-marginRight: 20
-marginTop: 20
-marginBottom: 20
+marginLeft: 0
+marginRight: 0
+marginTop: 0
+marginBottom: 0
 forceOnePage: false
 autoAdjustHeight: false
 savePDF: false
 saveImage: false
 dpi: 96
 overwrite: false
-extension: "jpeg"
-css: null
+save_format: "jpeg"
+css: "p {font-size: 12px;}"
 css_path: null
