[feat] support locomo

--- a/config/render/locomo.yml
+++ b/config/render/locomo.yml
@@ -17,5 +17,5 @@ save_kwargs:
   quality: 60
   optimize: true
   subsampling: 2
-css: "p {font-size: 12px;}"
+css: "p {font-size: 12px;} span {background-color: lightgray;} span:nth-child(even) {background-color: lightgreen;}"
 css_path: null
