--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "sentencepiece",
     "pillow",
     "deocr[playwright,pymupdf]>=0.3.0",
+    "rouge-score>=0.1.2",
 ]
 
 # for local development
