--- a/config/render/16k.yml
+++ b/config/render/16k.yml
@@ -17,5 +17,5 @@ save_kwargs:
   quality: 75
   optimize: true
   subsampling: 2
-css: "p {font-size: 12px;}"
-css_path: null
+css: null
+css_path: config/css/default.css
