--- a/config/render/default.yml
+++ b/config/render/default.yml
@@ -16,5 +16,5 @@ save_format: "jpeg"
 save_kwargs:
   quality: 85
   optimize: true
-css: "p {font-size: 12px;}"
-css_path: null
+css: null
+css_path: config/css/default.css
