--- a/config/render/locomo.yml
+++ b/config/render/locomo.yml
@@ -17,5 +17,5 @@ save_kwargs:
   quality: 50
   optimize: true
   subsampling: 2
-css: "span {font-size: 12px;} span.dialogue:nth-child(even) {background-color: lightgreen;} .timestamp {color: gray;} span + span {margin-left: 2px;} div + div {margin-top: .5em;} span.dialogue[data-speaker]:before {content: attr(data-speaker) ': ';font-weight: bold;}"
-css_path: null
+css: null
+css_path: config/css/locomo.css
